# jupswaps

./: Cargo.toml  JupiterDocs.txt  README.md
example/: Cargo.toml
example/src/: main.rs
jupiter-swap-api-client/: Cargo.toml
jupiter-swap-bot-js/: index.js  package-lock.json  package.json
