[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
solana-sdk = "=1.16.23"
solana-client = "=1.16.23"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
bs58 = "0.4.0"
base64 = "0.13"
dotenv = "0.15"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"